--- a/package.json
+++ b/package.json
@@ -3,22 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.11.0",
     "@fullcalendar/core": "^5.9.0",
     "@fullcalendar/daygrid": "^5.9.0",
+    "@fullcalendar/interaction": "^5.9.0",
     "@fullcalendar/list": "^5.9.0",
+    "@fullcalendar/react": "^5.9.0",
     "@fullcalendar/timegrid": "^5.9.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
+    "@material-ui/styles": "^4.11.4",
+    "@reach/checkbox": "^0.16.0",
+    "@reach/combobox": "^0.16.1",
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
+    "google-maps-react": "^2.0.6",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-places-autocomplete": "^3.3.2-alpha.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
+    "react-spring": "^9.0.0-rc.3",
+    "react-table": "^7.7.0",
+    "react-toastify": "^7.0.4",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
-    "toast": "^0.3.43",
+    "use-places-autocomplete": "^1.9.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -44,5 +61,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080/"
 }
