--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "autosize": "^5.0.1",
     "axios": "^0.21.1",
     "dayjs": "^1.10.6",
     "google-maps-react": "^2.0.6",
+    "leaflet": "^1.7.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-places-autocomplete": "^3.3.2-alpha.0",
+    "react-hook-form": "^7.13.0",
     "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
